found horizontal scroll bug

--- a/app/assets/stylesheets/application/display.css.sass
+++ b/app/assets/stylesheets/application/display.css.sass
@@ -9,7 +9,7 @@ html, body
 #wrapper
  width: 100%
  height: 100%
- overflow-x: hidden !important
+ overflow-x: hidden
  overflow-y: scroll
  -webkit-overflow-scrolling: touch
 
@@ -37,6 +37,9 @@ h1,h2,h3,h4,h5,h6,p
   padding-bottom: 0
   margin-top: 0
   box-shadow: none
+
+*
+ // outline: thin red solid
 
 .logo
  width: 100%
@@ -333,14 +336,14 @@ h1,h2,h3,h4,h5,h6,p
   height: 40px
   line-height: 40px
   z-index: 0
-  margin: 0px
+  margin: 0
   left: 0
   font-size: 20px
   text-indent: $gutter
   border-radius: 0
   border-top: 2px white solid
   border-left: 0
-  border-rightL 0
+  border-right: 0
   box-shadow: 0px 3px 3px rgba(37, 43, 65, .1)
 
 #icon-wrapper
